[package]
name = "kvs"
version = "0.1.0"
authors = ["Azathoth1729 <aa1203528272@gmail.com>"]
description = "A key-value store for talent plan's TP201 project"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2"
predicates = "2"
clap = { version = "3.2.7", features = ["derive"] }